[gd_scene load_steps=2 format=2]

[ext_resource path="res://Maps/MainMenu/MainButtons.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -34.0
margin_right = 84.0
margin_bottom = 34.0
script = ExtResource( 1 )

[node name="HostGame" type="Button" parent="MainButtons"]
margin_right = 168.0
margin_bottom = 20.0
text = "Host Game"

[node name="JoinGame" type="Button" parent="MainButtons"]
margin_top = 24.0
margin_right = 168.0
margin_bottom = 44.0
text = "Join Game"

[node name="Quit" type="Button" parent="MainButtons"]
margin_top = 48.0
margin_right = 168.0
margin_bottom = 68.0
text = "Quit"

[node name="Debug" type="Label" parent="."]
margin_left = 17.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 82.0
text = "Debug Text"

[connection signal="pressed" from="MainButtons/HostGame" to="MainButtons" method="_on_HostGame_pressed"]
[connection signal="pressed" from="MainButtons/JoinGame" to="MainButtons" method="_on_JoinGame_pressed"]
